<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="16.dp"
    android:layout_marginStart="16.dp"
    android:layout_marginEnd="16.dp"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/textProfile1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/profileText1"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/red" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/profilepicture"
        android:layout_gravity="center"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2.5dp" />

    <TextView
        android:id="@+id/textProfile2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileText2"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/textProfile3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileText3"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/orange" />

    <TextView
        android:id="@+id/textProfile4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileText4"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/orange" />

    <TextView
        android:id="@+id/textProfile5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileText5"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/orange" />

    <TextView
        android:id="@+id/textProfile6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileText6"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/orange" />

    <TextView
        android:id="@+id/textProfile7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileText7"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/orange" />

    <Button
        android:id="@+id/buttonShareProfile"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:text="@string/buttonProfileText1" />
</LinearLayout>